fix and close #8 process description on mobile

--- a/_scss/_component.header.scss
+++ b/_scss/_component.header.scss
@@ -125,12 +125,12 @@ $header-mobile-speaker-color: #999;
 
     .zhujianer-title {
         color: $clr-thirdary;
-        margin: 10px 0;
+        margin: 5px 0;
     }
 
     .subtitle.tooltip {
         color: $clr-secondary;
-        margin: 0 0 30px 0;
+        margin: 0 0 20px 0;
         opacity: 1.0;
         position: static;
         display: inline-block;
