--- a/_scss/_component.price.scss
+++ b/_scss/_component.price.scss
@@ -2,15 +2,15 @@
     .head {
         color: $clr-gray-lightest;
         height: 90px;
-        padding: 20px 0;
+        padding: 15px 0;
 
         h2 {
-            margin-bottom: 10px;
+            margin-bottom: 0;
         }
     }
 
     .content {
-        margin-top: 10px;
+        padding: 20px 0 10px 0;
 
         li {
             list-style-type: none;
